--- a/C#/ServiPlusApp/ServiPlusApp/Properties/Resources.resx
+++ b/C#/ServiPlusApp/ServiPlusApp/Properties/Resources.resx
@@ -172,6 +172,9 @@
   <data name="show-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\show-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lista-de-contactos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lista-de-contactos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="neumatico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\neumatico.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -202,7 +205,7 @@
   <data name="grupo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\grupo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lista-de-contactos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lista-de-contactos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\error.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
